--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
         android:layout_marginTop="38dp"
         android:layout_below="@+id/sorted"
         android:textSize="20dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:textIsSelectable="true"
+        android:textColor="#a31111" />
 
 </RelativeLayout>
